...
            }}
          />
          <FocusAwareStatusBar />

          <View className="my-2 flex flex-row items-center justify-between">
            <View className="flex" />
            <Pressable testID="onboarding-help" className="relative" onPress={() => router.push('/need-help')} accessibilityLabel={t('onboarding.help')}>
              <Ionicons name="chatbubble-ellipses" size={24} color={helpIconColor} />
              <View className="absolute -right-0.5 -top-0.5 size-3 items-center justify-center rounded-full bg-primary-600" />
            </Pressable>
          </View>

          <View className="flex-1">
...
